# atas-market-structure

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ocr  PLANS.md  README.md  _tmp_full_diff.txt  _tmp_pytest.txt  atas-market-structure.sln  code_review.md  compose.yaml  docker-compose.dolphindb.yml  docker-compose.yml  lint_check.py  pyproject.toml  requirements-ocr.txt  tmp_analyze_replay_gaps.py  tmp_check_adapter_version.py  tmp_check_db.py  tmp_extract_replay_css.py  tmp_gap2.py  tmp_gap_check.py  tmp_replay_snippets.txt  tmp_replay_workbench_check.js  tmp_verify_live.py  tools_check_file_sizes.py
.claude/: settings.local.json
docs/: analysis_pipeline.md  architecture.md  atas_adapter_payload_contract.md  atas_execution_tracking_design.md  atas_required_fields_checklist.md  fabio_system_absorption_checklist.md  market_script_driven_architecture.md  mirror_continuous_field_matrix.md  mirror_vs_continuous.md  replay_workbench_ai_chat_backend_api_design.md  replay_workbench_ai_chat_frontend_implementation_plan.md  replay_workbench_ai_chat_workspace_design.md  replay_workbench_architecture.md  replay_workbench_dual_ai_task_list.md  replay_workbench_event_strategy_gap_remediation_plan.md  replay_workbench_kline_realtime_backfill_design.md  replay_workbench_missing_data_recovery_design.md  replay_workbench_ui_ai_design.md  replay_workbench_ui_ai_schema_draft.md  replay_workbench_ui_gap_task_list.md  replay_workbench_ui_interaction_state_table.md  shuyin_gap_fill_system_absorption_checklist.md  thread_coordination.md
samples/: atas_adapter.continuous_state.sample.json  atas_adapter.history_bars.sample.json  atas_adapter.history_footprint.sample.json  atas_adapter.trigger_burst.sample.json  depth_snapshot.sample.json  event_snapshot.sample.json  market_structure.process.sample.json  market_structure.sample.json  process_context.sample.json  replay_workbench.ai_chat_request.sample.json  replay_workbench.ai_review_request.sample.json  replay_workbench.build_request.sample.json  replay_workbench.operator_entry.sample.json  replay_workbench.rebuild_latest_request.sample.json  replay_workbench.snapshot.sample.json
schemas/: atas_adapter.continuous_state.schema.json  atas_adapter.history_bars.schema.json  atas_adapter.history_footprint.schema.json  atas_adapter.trigger_burst.schema.json  belief_latest_envelope_v1.schema.json  belief_state_snapshot_v1.schema.json  depth_snapshot.schema.json  episode_evaluation_envelope_v1.schema.json  episode_evaluation_v1.schema.json  episode_list_envelope_v1.schema.json  event_episode_v1.schema.json  event_snapshot.schema.json  (+27 more)
(+527 files in other folders)
