[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atas-market-structure"
version = "0.1.0"
description = "Phase 1 infrastructure for ATAS market structure ingestion and analysis."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
where = ["src"]
