[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atas-market-structure"
version = "0.1.0"
description = "Phase 1 infrastructure for ATAS market structure ingestion and analysis."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.9.0,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.ruff.lint.per-file-ignores]
"src/atas_market_structure/**/__init__.py" = ["F401"]
"src/atas_market_structure/models/**/__init__.py" = ["F401"]
