[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atas-market-structure"
version = "0.1.0"
description = "Phase 1 infrastructure for ATAS market structure ingestion and analysis."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect>=0.8,<1.0",
    "fastapi>=0.115,<1.0",
    "openai>=1.0,<2.0",
    "pydantic>=2.12,<3.0",
    "redis>=5.2,<6.0",
    "uvicorn>=0.35,<1.0",
    "websockets>=15.0,<16.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11,<2.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.9.0,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.ruff.lint.per-file-ignores]
"src/atas_market_structure/**/__init__.py" = ["F401"]
"src/atas_market_structure/models/**/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
follow_imports = "silent"
ignore_missing_imports = true
